Update Dockerfile to skip tests during build and add persistence.xml for JPA configuration in template

--- a/template/tmajava21/Dockerfile
+++ b/template/tmajava21/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /home/app
 COPY . /home/app
 
 # build shared lib
-RUN cd function/shared-lib && mvn clean install 
+RUN cd function/shared-lib && mvn clean install -DskipTests
 # build function
 RUN cd function && mvn clean package -U -DskipTests 
 
