--- a/template/tmajava21/function/pom.xml
+++ b/template/tmajava21/function/pom.xml
@@ -15,11 +15,12 @@
     </properties>
     <dependencies>
 
-        <dependency>
+        <!-- shared lib if needed -->
+        <!-- <dependency> 
             <groupId>com.shared.function</groupId>
             <artifactId>shared-lib</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>com.openfaas</groupId>
